--- a/.gitignore
+++ b/.gitignore
@@ -2,11 +2,18 @@
 .godot/
 /android/
 
+.vscode/
+
 export_presets.cfg
 *.keystore
-.vscode/
 *nupkg
+
 *.otf
 *.tmp
 *.exe
 *.txt
+*.dll
+*.pdb
+*.zip
+*.tar.gz
+*.7z
